Fix bug, white gap between recipe section and footer

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -175,6 +175,7 @@ main {
     background-color: #B7CECE;
     margin-bottom: 0px;
     padding: 10px;
+    min-height: 450px;
 }
 
 .card-image-position {
